--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"devDependencies": {
 		"@chainlink/contracts": "^0.6.1",
-		"@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
+		"@nomiclabs/hardhat-ethers": "^2.2.3",
 		"@nomiclabs/hardhat-etherscan": "^3.1.7",
 		"@nomiclabs/hardhat-waffle": "^2.0.5",
 		"chai": "^4.3.7",
@@ -16,5 +16,8 @@
 		"prettier-plugin-solidity": "^1.1.3",
 		"solhint": "^3.4.1",
 		"solidity-coverage": "^0.8.2"
+	},
+	"dependencies": {
+		"@ethersproject/providers": "^5.7.2"
 	}
 }
