--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
-  "name": "smartcontract-lottery",
-  "version": "0.1.0",
-  "private": true,
+  "name": "hardhat-smartcontract-lottery-fcc",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "yarn hardhat test",
+    "test-staging": "yarn hardhat test --network sepolia",
+    "lint": "yarn solhint 'contracts/*.sol'",
+    "lint:fix": "yarn solhint 'contracts/**/*.sol' --fix",
+    "format": "yarn prettier --write .",
+    "coverage": "yarn hardhat coverage"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.1",
+    "hardhat": "^2.6.7",
+    "hardhat-contract-sizer": "^2.4.0",
+    "hardhat-deploy": "^0.9.29",
+    "hardhat-gas-reporter": "^1.0.7",
+    "prettier": "^2.4.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.6",
+    "solidity-coverage": "^0.7.13"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "@chainlink/contracts": "^0.5.1",
+    "@chainlink/test-helpers": "^0.0.7-alpha",
+    "@chainlink/token": "^1.1.0",
+    "@openzeppelin/contracts": "^4.5.0",
+    "babel-eslint": "^10.1.0",
+    "dotenv": "^10.0.0"
+  },
+  "mocha": {
+    "timeout": 10000000
   }
 }
