--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "smartcontract-lottery",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "moralis": "^2.18.4",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-moralis": "^1.4.2",
-    "tailwindcss": "3.3.2"
-  }
+	"name": "nextjs-smartcontract-lottery",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"moralis": "^1.8.0",
+		"next": "12.1.5",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"react-moralis": "^1.4.0",
+		"web3uikit": "^0.1.159"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.5",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.24"
+	}
 }
