--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"moralis": "^1.8.0",
+		"@moralisweb3/next": "^2.18.4",
+		"moralis": "^2.18.4",
+		"moralis-v1": "^1.12.0",
 		"next": "12.1.5",
+		"next-auth": "^4.22.1",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-moralis": "^1.4.0",
