--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@moralisweb3/next": "^2.18.4",
+		"clsx": "^1.2.1",
 		"moralis": "^2.18.4",
 		"moralis-v1": "^1.12.0",
 		"next": "12.1.5",
