--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,29 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+SmartContract-Lottery-HTML/.env.example
+SmartContract-Lottery-HTML/.gitattributes
+SmartContract-Lottery-HTML/.gitignore
+SmartContract-Lottery-HTML/.npmignore
+SmartContract-Lottery-HTML/.prettierignore
+SmartContract-Lottery-HTML/.prettierrc
+SmartContract-Lottery-HTML/.solhint.json
+SmartContract-Lottery-HTML/.solhintignore
+SmartContract-Lottery-HTML/hardhat.config.js
+SmartContract-Lottery-HTML/helper-hardhat-config.js
+SmartContract-Lottery-HTML/LICENSE
+SmartContract-Lottery-HTML/package.json
+SmartContract-Lottery-HTML/README.md
+SmartContract-Lottery-HTML/yarn.lock
+SmartContract-Lottery-HTML/contracts/Raffle.sol
+SmartContract-Lottery-HTML/contracts/test/VRFCoordinatorV2Mock.sol
+SmartContract-Lottery-HTML/deploy/00-deploy-mocks.js
+SmartContract-Lottery-HTML/deploy/01-deploy-raffle.js
+SmartContract-Lottery-HTML/deploy/02-update-front-end.js
+SmartContract-Lottery-HTML/deploy/99-update-front-end.js
+SmartContract-Lottery-HTML/img/keepers.png
+SmartContract-Lottery-HTML/scripts/enter.js
+SmartContract-Lottery-HTML/scripts/mockOffchain.js
+SmartContract-Lottery-HTML/test/staging/Raffle.staging.test.js
+SmartContract-Lottery-HTML/test/unit/Raffle.test.js
+SmartContract-Lottery-HTML/utils/verify.js
